--- a/styles/style.css
+++ b/styles/style.css
@@ -597,18 +597,20 @@ footer span {
 		height: 67px;
 		position: absolute;
 		border-bottom-right-radius: 30px;
+		position: fixed;
 	}
 
 	.nav-container .checkbox {
 		position: absolute;
 		display: block;
-		height: 32px;
-		width: 32px;
-		top: 20px;
-		left: 20px;
-		z-index: 5;
+		height: 35px;
+		width: 35px;
+		top: 10px;
+		left: 15px;
 		opacity: 0;
 		cursor: pointer;
+		z-index: 11;
+		position: fixed;
 	}
 
 	.nav-container .hamburger-lines {
@@ -618,10 +620,12 @@ footer span {
 		position: absolute;
 		top: 17px;
 		left: 20px;
-		z-index: 2;
+		z-index: 10;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		z-index: 10;
+		position: fixed;
 	}
 
 	.nav-container .hamburger-lines .line {
@@ -660,6 +664,8 @@ footer span {
 		transition: transform 0.5s ease-in-out;
 		text-align: center;
 		box-shadow: rgb(80 28 100) 0px 52px 186px 10px;
+		position: fixed;
+		z-index: 5;
 	}
 
 	.navbar .menu-items li {
